Fix header z-index

--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -32,6 +32,7 @@
 
 .navbar {
   position:absolute;
+  z-index:1000;
   top:0;
   width:100%;
   border-radius:0;
